[package]
name = "lateinit-variable"
description = "Lateinit for Rust!"
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"
include = [
    "/src/**",
    "/README.md",
    "Cargo.toml"
]
repository = "https://github.com/AlexSherbinin/lateinit-variable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
